re PR bootstrap/61084 (wide-int merge broke Solaris/SPARC bootstrap)

gcc/
	PR target/61084
	* config/sparc/sparc.c (sparc_fold_builtin): Use widest_int rather
	than wide_int.

From-SVN: r210604